--- a/src/py/jupyter/requirements.txt
+++ b/src/py/jupyter/requirements.txt
@@ -18,6 +18,7 @@ pexpect==4.6.0
 pickleshare==0.7.4
 prompt-toolkit==1.0.15
 ptyprocess==0.6.0
+PyExecJS==1.5.1
 pygame==1.9.4
 Pygments==2.2.0
 requests==2.19.1
