--- a/src/py/jupyter/requirements.txt
+++ b/src/py/jupyter/requirements.txt
@@ -3,6 +3,7 @@ appnope==0.1.0
 async-timeout==3.0.0
 attrs==18.1.0
 backcall==0.1.0
+cdiff==1.0
 certifi==2018.4.16
 chardet==3.0.4
 decorator==4.3.0
