--- a/src/py/jupyter/requirements.txt
+++ b/src/py/jupyter/requirements.txt
@@ -1,5 +1,6 @@
 aiohttp==3.3.2
 appnope==0.1.0
+astroid==2.3.3
 async-timeout==3.0.0
 attrs==18.1.0
 backcall==0.1.0
@@ -12,7 +13,10 @@ idna==2.7
 idna-ssl==1.1.0
 ipython==7.12.0
 ipython-genutils==0.2.0
+isort==4.3.21
 jedi==0.12.1
+lazy-object-proxy==1.4.3
+mccabe==0.6.1
 multidict==4.3.1
 parso==0.3.1
 pexpect==4.6.0
@@ -22,12 +26,15 @@ ptyprocess==0.6.0
 PyExecJS==1.5.1
 pygame==1.9.4
 Pygments==2.2.0
+pylint==2.4.4
 requests==2.19.1
 simplegeneric==0.8.1
-six==1.11.0
+six==1.14.0
 thrift==0.11.0
 tqdm==4.23.4
 traitlets==4.3.2
+typed-ast==1.4.1
 urllib3==1.23
 wcwidth==0.1.7
+wrapt==1.11.2
 yarl==1.2.6
