[cpp]在opengl项目中增加了颜色的学习ut

--- a/src/cpp/opengl/CMakeLists.txt
+++ b/src/cpp/opengl/CMakeLists.txt
@@ -12,7 +12,7 @@ SET(TARGET_NAME gl)
 SET(TARGET_TYPE RUNTIME)
 SET(NEED_COPY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/resource/)
 SET(AUTO_RUN ON)
-SET(RUN_ARGS --gtest_filter=CAMUT.HelloCamera)
+SET(RUN_ARGS --gtest_filter=COLUT.HelloColor)
 SET(CMAKE_EXPORT_COMPILE_COMMANDS OFF)
 
 SOURCE_DIRS(./src
