[cpp]在opengl项目中增加了基础光照的学习ut

--- a/src/cpp/opengl/CMakeLists.txt
+++ b/src/cpp/opengl/CMakeLists.txt
@@ -12,12 +12,14 @@ SET(TARGET_NAME gl)
 SET(TARGET_TYPE RUNTIME)
 SET(NEED_COPY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/resource/)
 SET(AUTO_RUN ON)
-SET(RUN_ARGS --gtest_filter=COLUT.HelloColor)
+SET(RUN_ARGS --gtest_filter=WOKUT.Hello)
 SET(CMAKE_EXPORT_COMPILE_COMMANDS OFF)
 
 SOURCE_DIRS(./src
-            ./src/getting_started
             ./src/object
-            ./src/lighting)
+            ./src/working
+            # ./src/getting_started
+            # ./src/lighting
+            )
 
 INCLUDE($ENV{MYCMAKE}/common/tailer.cmake)
