[cpp]为deps里增加了assimp库

--- a/src/cpp/opengl/CMakeLists.txt
+++ b/src/cpp/opengl/CMakeLists.txt
@@ -7,6 +7,7 @@ INCLUDE($ENV{MYCMAKE}/common/header.cmake)
 
 SET(NEED_GTEST TRUE)
 SET(NEED_GLFW TRUE)
+SET(NEED_ASSIMP TRUE)
 SET(NEED_STB_IMAGE TRUE)
 SET(TARGET_NAME gl)
 SET(TARGET_TYPE RUNTIME)
