[cpp]在opengl项目中增加了黑洞特效的ut

--- a/src/cpp/opengl/CMakeLists.txt
+++ b/src/cpp/opengl/CMakeLists.txt
@@ -19,8 +19,10 @@ SET(CMAKE_EXPORT_COMPILE_COMMANDS OFF)
 SOURCE_DIRS(./src
             ./src/object
             ./src/working
-            # ./src/getting_started
-            # ./src/lighting
+            #./src/practice
+            #./src/advance_opengl
+            #./src/getting_started
+            #./src/lighting
             )
 
 INCLUDE($ENV{MYCMAKE}/common/tailer.cmake)
