[cpp]在opengl项目中增加了法线贴图的ut

--- a/src/cpp/opengl/CMakeLists.txt
+++ b/src/cpp/opengl/CMakeLists.txt
@@ -21,6 +21,7 @@ SOURCE_DIRS(./src
             ./src/working
             #./src/practice
             #./src/advance_opengl
+            #./src/advance_lighting
             #./src/getting_started
             #./src/lighting
             )
