--- a/src/cpp/opengl/CMakeLists.txt
+++ b/src/cpp/opengl/CMakeLists.txt
@@ -8,6 +8,7 @@ INCLUDE($ENV{MYCMAKE}/common/header.cmake)
 SET(NEED_GTEST TRUE)
 SET(NEED_GLFW TRUE)
 SET(NEED_ASSIMP TRUE)
+SET(NEED_FREETYPE TRUE)
 SET(NEED_STB_IMAGE TRUE)
 SET(TARGET_NAME gl)
 SET(TARGET_TYPE RUNTIME)
