[emacs|shell]将两个配置文件保存到项目之中

--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "src/vim/vftplug"]
 	path = src/vim/vftplug
 	url = git@github.com:kirakuiin/vftplug.git
+[submodule "src/emacs/cemacs"]
+	path = src/emacs/cemacs
+	url = git@github.com:kirakuiin/cemacs.git
