--- a/src/cpp/easy_engine/test/CMakeLists.txt
+++ b/src/cpp/easy_engine/test/CMakeLists.txt
@@ -11,7 +11,7 @@ SET(TARGET_TYPE RUNTIME)
 SET(NEED_COPY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/config/)
 SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 SET(AUTO_RUN ON)
-SET(RUN_ARGS --gtest_filter=WINUT.ParticleTest)
+SET(RUN_ARGS --gtest_filter=WINUT.AnimationTest)
 
 # 手动包含标准库是为了在compile_commands.json中生成带有-I/stdlib的命令
 include_directories(
