[cpp]增加了easy_engine里组件类的实现

--- a/src/cpp/easy_engine/CMakeLists.txt
+++ b/src/cpp/easy_engine/CMakeLists.txt
@@ -19,6 +19,7 @@ SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 include_directories(/Library/Developer/CommandLineTools/usr/include/c++/v1)
 
 SOURCE_DIRS(
+  ./src/widget
   ./src/utility
   ./src/opengl
   ./src/graphics
