[cpp]增加了easy_engine里音频类的实现

--- a/src/cpp/easy_engine/CMakeLists.txt
+++ b/src/cpp/easy_engine/CMakeLists.txt
@@ -24,6 +24,8 @@ SOURCE_DIRS(
   ./src/opengl
   ./src/graphics
   ./src/physics
+  ./src/common
+  ./src/audio
   )
 
 INCLUDE($ENV{MYCMAKE}/common/tailer.cmake)
