--- a/src/cpp/easy_engine/CMakeLists.txt
+++ b/src/cpp/easy_engine/CMakeLists.txt
@@ -14,9 +14,10 @@ SET(TARGET_NAME easy_engine)
 SET(TARGET_TYPE LIBRARY)
 SET(NEED_COPY_PATH ${CMAKE_CURRENT_SOURCE_DIR}/res/)
 SET(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+SET(CMAKE_INCLUDE_HEADERS_IN_COMPILE_COMMANDS ON)
 
 # 手动包含标准库是为了在compile_commands.json中生成带有-I/stdlib的命令
-include_directories(/Library/Developer/CommandLineTools/usr/include/c++/v1)
+include_directories(/Applications/Xcode.app/Contents/Developer/Toolchains/XcodeDefault.xctoolchain/usr/include/c++/v1/)
 
 SOURCE_DIRS(
   ./src/widget
